@@ -22,6 +22,7 @@ import com.google.common.base.Strings;
 import io.dockstore.common.DescriptorLanguage;
 import io.dockstore.common.SourceControl;
 import io.dockstore.webservice.CustomWebApplicationException;
+import io.dockstore.webservice.DockstoreWebserviceApplication;
 import io.dockstore.webservice.core.Entry;
 import io.dockstore.webservice.core.SourceFile;
 import io.dockstore.webservice.core.Version;
@@ -48,6 +49,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import javax.ws.rs.core.GenericType;
+import javax.ws.rs.core.Response.Status;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpStatus;
 import org.slf4j.Logger;
@@ -59,11 +61,13 @@ import org.slf4j.LoggerFactory;
 public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
     /**
      * should use the java api, but I can't make heads or tails of the documentation
-     * https://docs.atlassian.com/bitbucket-server/javadoc/5.11.1/api/reference/packages.html
+     * <a href="https://docs.atlassian.com/bitbucket-server/javadoc/5.11.1/api/reference/packages.html">...</a>
      */
     private static final String BITBUCKET_V2_API_URL = "https://api.bitbucket.org/2.0/";
     private static final String BITBUCKET_GIT_URL_PREFIX = "git@bitbucket.org:";
     private static final String BITBUCKET_GIT_URL_SUFFIX = ".git";
+
+    private static final long ONE_MINUTE_IN_MS = 60_000L;
 
     private static final Logger LOG = LoggerFactory.getLogger(BitBucketSourceCodeRepo.class);
     private final ApiClient apiClient;
@@ -106,14 +110,25 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
         RepositoriesApi repositoriesApi = new RepositoriesApi(apiClient);
         try {
             List<String> files = new ArrayList<>();
-            PaginatedTreeentries paginatedTreeentries = repositoriesApi
-                .repositoriesUsernameRepoSlugSrcNodePathGet(repositoryId.split("/")[0], reference, pathToDirectory,
-                    repositoryId.split("/")[1], null, null, null);
+
+            PaginatedTreeentries paginatedTreeentries = null;
+            boolean rateLimited;
+            do {
+                rateLimited = false;
+                try {
+                    paginatedTreeentries = repositoriesApi
+                        .repositoriesUsernameRepoSlugSrcNodePathGet(repositoryId.split("/")[0], reference, pathToDirectory,
+                            repositoryId.split("/")[1], null, null, null);
+                } catch (ApiException e) {
+                    rateLimited = isRateLimited(false, e, "listing files");
+                }
+            } while (rateLimited);
+
             // TODO: this pagination pattern happens a lot with Bitbucket, a future exercise would clean this up
             while (paginatedTreeentries != null) {
                 files.addAll(
                     paginatedTreeentries.getValues().stream().map(entry -> StringUtils.removeStart(entry.getPath(), pathToDirectory + "/"))
-                        .collect(Collectors.toList()));
+                        .toList());
                 if (paginatedTreeentries.getNext() != null) {
                     paginatedTreeentries = getArbitraryURL(paginatedTreeentries.getNext(), new GenericType<PaginatedTreeentries>() {
                     });
@@ -133,7 +148,17 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
         RepositoriesApi repositoriesApi = new RepositoriesApi(apiClient);
         try {
             Map<String, String> collect = new HashMap<>();
-            PaginatedRepositories contributor = repositoriesApi.repositoriesUsernameGet(gitUsername, "contributor");
+            PaginatedRepositories contributor = null;
+            boolean rateLimited;
+            do {
+                rateLimited = false;
+                try {
+                    contributor = repositoriesApi.repositoriesUsernameGet(gitUsername, "contributor");
+                } catch (ApiException e) {
+                    rateLimited = isRateLimited(false, e, "getting repositories");
+                }
+            } while (rateLimited);
+
             while (contributor != null) {
                 collect.putAll(contributor.getValues().stream().collect(Collectors
                     .toMap(object -> BITBUCKET_GIT_URL_PREFIX + object.getFullName() + BITBUCKET_GIT_URL_SUFFIX, Repository::getFullName)));
@@ -169,9 +194,20 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
      */
     private <T> T getArbitraryURL(String url, GenericType<T> type) throws ApiException {
         String substring = url.substring(BITBUCKET_V2_API_URL.length() - 1);
-        return apiClient
-            .invokeAPI(substring, "GET", new ArrayList<>(), null, new HashMap<>(), new HashMap<>(), "application/json", "application/json",
-                new String[] { "api_key", "basic", "oauth2" }, type).getData();
+        T result = null;
+        boolean rateLimited;
+        do {
+            rateLimited = false;
+            try {
+                result = apiClient
+                    .invokeAPI(substring, "GET", new ArrayList<>(), null, new HashMap<>(), new HashMap<>(), "application/json", "application/json",
+                        new String[]{"api_key", "basic", "oauth2"}, type).getData();
+            } catch (ApiException e) {
+                rateLimited = isRateLimited(false, e, "getting pagination");
+            }
+        } while (rateLimited);
+
+        return result;
     }
 
     /**
@@ -212,24 +248,59 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
         RefsApi refsApi = new RefsApi(apiClient);
         // There isn't exactly a single Bitbucket endpoint to get a version which then allows us to determine if it's a branch or tag.
         // This code checks two endpoints (branches and tags) to see if it belongs in which.
-        try {
-            refsApi.repositoriesUsernameRepoSlugRefsBranchesNameGet(workspace, name, repoSlug);
-            version.setReferenceType(Version.ReferenceType.BRANCH);
-            return;
-        } catch (ApiException e) {
-            LOG.warn(gitUsername + ": apiexception on reading branches" + e.getMessage(), e);
-            // this is not so critical to warrant a http error code
-        }
+        boolean rateLimited;
+        do {
+            try {
+                refsApi.repositoriesUsernameRepoSlugRefsBranchesNameGet(workspace, name, repoSlug);
+                version.setReferenceType(Version.ReferenceType.BRANCH);
+                return;
+            } catch (ApiException e) {
+                rateLimited = isRateLimited(false, e, "reading branches");
+            }
 
-        try {
-            refsApi.repositoriesUsernameRepoSlugRefsTagsNameGet(workspace, name, repoSlug);
-            version.setReferenceType(Version.ReferenceType.TAG);
-            return;
-        } catch (ApiException e) {
-            LOG.warn(gitUsername + ": apiexception on reading tags" + e.getMessage(), e);
-            // this is not so critical to warrant a http error code
-        }
+            try {
+                refsApi.repositoriesUsernameRepoSlugRefsTagsNameGet(workspace, name, repoSlug);
+                version.setReferenceType(Version.ReferenceType.TAG);
+                return;
+            } catch (ApiException e) {
+                // this is not so critical to warrant a http error code
+                rateLimited = isRateLimited(rateLimited, e, "reading tags");
+            }
+        } while (rateLimited);
+
         throw new CustomWebApplicationException(name + " is not a Bitbucket branch or tag in " + repositoryId, HttpStatus.SC_INTERNAL_SERVER_ERROR);
+    }
+
+    /**
+     * determine whether a request is rate-limited, output logging messages, and potentially sleep past rate-limiting
+     * @param rateLimited
+     * @param e
+     * @param message
+     * @return
+     */
+    private boolean isRateLimited(final boolean rateLimited, ApiException e, String message) {
+        if (LOG.isWarnEnabled()) {
+            LOG.warn("%s: apiexception on %s%s".formatted(gitUsername, message, e.getMessage()), e);
+        }
+        // this is not so critical to warrant a http error code
+        boolean newlyRateLimited = false;
+        if (e.getCode() == Status.TOO_MANY_REQUESTS.getStatusCode()) {
+            newlyRateLimited = true;
+            LOG.error("%s: rate-limited on %s".formatted(gitUsername, message));
+            if (DockstoreWebserviceApplication.runningOnCircleCI()) {
+                try {
+                    LOG.error("We sleep");
+                    Thread.sleep(ONE_MINUTE_IN_MS); // one minute, should be exponential back-off
+                } catch (InterruptedException ex) {
+                    LOG.error("Rate-limit wait interrupted!", e);
+                    // Restore interrupted state...
+                    Thread.currentThread().interrupt();
+                }
+            } else {
+                throw new CustomWebApplicationException("rate limited by bitbucket, please wait for up to one hour for quota to re-generate", HttpStatus.SC_BAD_REQUEST);
+            }
+        }
+        return rateLimited || newlyRateLimited;
     }
 
     @Override
@@ -283,8 +354,17 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
         Map<String, WorkflowVersion> existingDefaults, Optional<String> versionName, boolean hardRefresh) {
         RefsApi refsApi = new RefsApi(apiClient);
         try {
-            PaginatedRefs paginatedRefs = refsApi
-                .repositoriesUsernameRepoSlugRefsGet(repositoryId.split("/")[0], repositoryId.split("/")[1]);
+
+            PaginatedRefs paginatedRefs = null;
+            boolean rateLimited;
+            do {
+                rateLimited = false;
+                try {
+                    paginatedRefs = refsApi.repositoriesUsernameRepoSlugRefsGet(repositoryId.split("/")[0], repositoryId.split("/")[1]);
+                } catch (ApiException e) {
+                    rateLimited = isRateLimited(false, e, "getting pagination");
+                }
+            } while (rateLimited);
             // this pagination structure is repetitive and should be refactored
             while (paginatedRefs != null) {
                 paginatedRefs.getValues().forEach(ref -> {
@@ -360,20 +440,29 @@ public class BitBucketSourceCodeRepo extends SourceCodeRepoInterface {
 
     @Override
     public String getMainBranch(Entry entry, String repositoryId) {
-        RepositoriesApi api = new RepositoriesApi(apiClient);
         // Is default version set?
         if (entry.getDefaultVersion() != null) {
             return getBranchNameFromDefaultVersion(entry);
         } else {
             // If default version is not set, need to find the main branch
-            try {
-                Repository repository = api.repositoriesUsernameRepoSlugGet(repositoryId.split("/")[0], repositoryId.split("/")[1]);
-                return repository.getMainbranch().getName();
-            } catch (ApiException e) {
-                LOG.error("Unable to retrieve default branch for repository " + repositoryId, e);
-                return null;
-            }
+            return getDefaultBranch(repositoryId);
         }
+    }
+
+    @Override
+    public String getDefaultBranch(String repositoryId) {
+        RepositoriesApi api = new RepositoriesApi(apiClient);
+        Repository repository;
+        try {
+            repository = api.repositoriesUsernameRepoSlugGet(repositoryId.split("/")[0], repositoryId.split("/")[1]);
+            if (repository != null && repository.getMainbranch() != null) {
+                return repository.getMainbranch().getName();
+            }
+        } catch (ApiException e) {
+            LOG.error("Unable to retrieve default branch for repository " + repositoryId, e);
+            return null;
+        }
+        return null;
     }
 
     @Override
