@@ -1,3 +1,4 @@
+
 /*
  *    Copyright 2017 OICR
  *
@@ -17,10 +18,12 @@
 package io.dockstore.webservice.helpers;
 
 import static com.google.common.base.Preconditions.checkNotNull;
+import static io.dockstore.webservice.Constants.DOCKSTORE_ALTERNATE_YML_PATH;
 import static io.dockstore.webservice.Constants.DOCKSTORE_YML_PATH;
 import static io.dockstore.webservice.Constants.DOCKSTORE_YML_PATHS;
 import static io.dockstore.webservice.Constants.LAMBDA_FAILURE;
 import static io.dockstore.webservice.Constants.SKIP_COMMIT_ID;
+import static io.dockstore.webservice.DockstoreWebserviceApplication.getOkHttpClient;
 
 import com.google.common.base.Joiner;
 import com.google.common.collect.Lists;
@@ -32,7 +35,8 @@ import io.dockstore.common.VersionTypeValidation;
 import io.dockstore.common.yaml.DockstoreYaml12;
 import io.dockstore.common.yaml.DockstoreYamlHelper;
 import io.dockstore.common.yaml.Service12;
-import io.dockstore.common.yaml.YamlWorkflow;
+import io.dockstore.common.yaml.Workflowish;
+import io.dockstore.common.yaml.YamlNotebook;
 import io.dockstore.webservice.CacheHitListener;
 import io.dockstore.webservice.CustomWebApplicationException;
 import io.dockstore.webservice.DockstoreWebserviceApplication;
@@ -40,6 +44,7 @@ import io.dockstore.webservice.core.AppTool;
 import io.dockstore.webservice.core.BioWorkflow;
 import io.dockstore.webservice.core.Entry;
 import io.dockstore.webservice.core.LicenseInformation;
+import io.dockstore.webservice.core.Notebook;
 import io.dockstore.webservice.core.Service;
 import io.dockstore.webservice.core.SourceFile;
 import io.dockstore.webservice.core.Token;
@@ -53,37 +58,40 @@ import io.dockstore.webservice.core.WorkflowMode;
 import io.dockstore.webservice.core.WorkflowVersion;
 import io.dockstore.webservice.jdbi.TokenDAO;
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.Spliterator;
+import java.util.Spliterators;
+import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 import okhttp3.OkHttpClient;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.commons.lang3.tuple.Triple;
 import org.apache.http.HttpStatus;
-import org.kohsuke.github.AbuseLimitHandler;
 import org.kohsuke.github.GHBranch;
 import org.kohsuke.github.GHCommit;
 import org.kohsuke.github.GHContent;
 import org.kohsuke.github.GHEmail;
+import org.kohsuke.github.GHEvent;
+import org.kohsuke.github.GHEventInfo;
+import org.kohsuke.github.GHEventPayload;
+import org.kohsuke.github.GHException;
 import org.kohsuke.github.GHFileNotFoundException;
 import org.kohsuke.github.GHMyself;
 import org.kohsuke.github.GHMyself.RepositoryListFilter;
@@ -92,11 +100,12 @@ import org.kohsuke.github.GHRef;
 import org.kohsuke.github.GHRepository;
 import org.kohsuke.github.GHUser;
 import org.kohsuke.github.GitHub;
+import org.kohsuke.github.GitHubAbuseLimitHandler;
 import org.kohsuke.github.GitHubBuilder;
-import org.kohsuke.github.HttpConnector;
-import org.kohsuke.github.RateLimitHandler;
-import org.kohsuke.github.extras.ImpatientHttpConnector;
-import org.kohsuke.github.extras.okhttp3.ObsoleteUrlFactory;
+import org.kohsuke.github.GitHubRateLimitHandler;
+import org.kohsuke.github.RateLimitChecker.LiteralValue;
+import org.kohsuke.github.connector.GitHubConnectorResponse;
+import org.kohsuke.github.extras.okhttp3.OkHttpGitHubConnector;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -106,36 +115,77 @@ import org.slf4j.LoggerFactory;
 public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
 
     public static final String OUT_OF_GIT_HUB_RATE_LIMIT = "Out of GitHub rate limit";
+    public static final int SLEEP_AT_RATE_LIMIT_OR_BELOW = 50;
+
+    public static final String GITHUB_ABUSE_LIMIT_REACHED = "GitHub abuse limit reached";
+    public static final int GITHUB_MAX_CACHE_AGE_SECONDS = 30; // GitHub's default max-cache age is 60 seconds
+
+    public static final String REFS_HEADS = "refs/heads/";
+    /**
+     * each section that starts with (?!.* is excluding a specific character
+     */
+    public static final Pattern GIT_BRANCH_TAG_PATTERN = Pattern.compile("^refs/(tags|heads)/((?!.*//)(?!.*\\^)(?!.*:)(?!.*\\\\)(?!.*@)(?!.*\\[)(?!.*\\?)(?!.*~)(?!.*\\.\\.)[\\p{Punct}\\p{L}\\d\\-_/]+)$");
     private static final Logger LOG = LoggerFactory.getLogger(GitHubSourceCodeRepo.class);
     private final GitHub github;
-    private String githubTokenUsername;
+    private final String githubTokenUsername;
+
+    public GitHubSourceCodeRepo(long installationId) {
+        this(null, null, installationId);
+    }
+
+    public GitHubSourceCodeRepo(String githubTokenUsername, String githubTokenContent) {
+        this(githubTokenUsername, githubTokenContent, null);
+    }
 
     /**
      *  @param githubTokenUsername the username for githubTokenContent
      * @param githubTokenContent authorization token
      */
-    public GitHubSourceCodeRepo(String githubTokenUsername, String githubTokenContent) {
+    private GitHubSourceCodeRepo(String githubTokenUsername, String githubTokenContent, Long installationId) {
         this.githubTokenUsername = githubTokenUsername;
-        // this code is duplicate from DockstoreWebserviceApplication, except this is a lot faster for unknown reasons ...
-        OkHttpClient.Builder builder = new OkHttpClient().newBuilder();
-        builder.eventListener(new CacheHitListener(GitHubSourceCodeRepo.class.getSimpleName(), githubTokenUsername));
-        if (System.getenv("CIRCLE_SHA1") != null) {
+
+        try {
+            assert ((githubTokenUsername != null && githubTokenContent != null && installationId == null) || (githubTokenUsername == null && githubTokenContent == null && installationId != null));
+            if (githubTokenUsername != null) {
+                final GitHubBuilder gitHubBuilder = getBuilder(githubTokenUsername).withOAuthToken(githubTokenContent, githubTokenUsername);
+                this.github = gitHubBuilder.build();
+            } else {
+                this.github = CacheConfigManager.getInstance().getGitHubClientFromCache(installationId);
+            }
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    /**
+     * Get a github client builder with everything configured except for auth
+     * @param cacheNamespace namespace for logging in the cache, cache miss reports, etc.
+     * @return github client builder
+     */
+    public static GitHubBuilder getBuilder(String cacheNamespace) {
+        OkHttpClient.Builder builder = getOkHttpClient().newBuilder();
+        builder.eventListener(new CacheHitListener(GitHubSourceCodeRepo.class.getSimpleName(), cacheNamespace));
+        // namespace cache if running on circle ci
+        if (DockstoreWebserviceApplication.runningOnCircleCI()) {
             // namespace cache by user when testing
-            builder.cache(DockstoreWebserviceApplication.getCache(gitUsername));
+            builder.cache(DockstoreWebserviceApplication.getCache(cacheNamespace));
         } else {
             // use general cache
             builder.cache(DockstoreWebserviceApplication.getCache(null));
         }
         OkHttpClient build = builder.build();
-        ObsoleteUrlFactory obsoleteUrlFactory = new ObsoleteUrlFactory(build);
-
-        HttpConnector okHttp3Connector = new ImpatientHttpConnector(obsoleteUrlFactory::open);
-        try {
-            this.github = new GitHubBuilder().withOAuthToken(githubTokenContent, githubTokenUsername).withRateLimitHandler(new FailRateLimitHandler(githubTokenUsername))
-                    .withAbuseLimitHandler(AbuseLimitHandler.WAIT).withConnector(okHttp3Connector).build();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        // Must set the cache max age otherwise kohsuke assumes 0 which significantly slows down our GitHub requests
+        OkHttpGitHubConnector okHttp3Connector = new OkHttpGitHubConnector(build, GITHUB_MAX_CACHE_AGE_SECONDS);
+        GitHubBuilder gitHubBuilder = new GitHubBuilder()
+            .withAbuseLimitHandler(new FailAbuseLimitHandler(cacheNamespace))
+            .withConnector(okHttp3Connector);
+        if (DockstoreWebserviceApplication.runningOnCircleCI()) {
+            gitHubBuilder = gitHubBuilder.withRateLimitChecker(new LiteralValue(SLEEP_AT_RATE_LIMIT_OR_BELOW));
+        } else {
+            gitHubBuilder = gitHubBuilder.withRateLimitHandler(new FailRateLimitHandler(cacheNamespace));
         }
+        return gitHubBuilder;
     }
 
     public String getTopic(String repositoryId) {
@@ -174,7 +224,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         try {
             repo = github.getRepository(repositoryId);
             List<GHContent> directoryContent = repo.getDirectoryContent(pathToDirectory, reference);
-            return directoryContent.stream().map(GHContent::getName).collect(Collectors.toList());
+            return directoryContent.stream().map(GHContent::getName).toList();
         } catch (IOException e) {
             LOG.error(gitUsername + ": IOException on listFiles in " + pathToDirectory + " for repository " + repositoryId +  ":" + reference + ", " + e.getMessage(), e);
             return null;
@@ -356,7 +406,19 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      */
     public boolean isOneOfMyOrganizations(String organization) {
         try {
-            return organization.equals(githubTokenUsername) || github.getMyOrganizations().keySet().contains(organization);
+            return organization.equals(githubTokenUsername) || github.getMyOrganizations().containsKey(organization);
+        } catch (IOException e) {
+            LOG.error("could not determine organization accessibility due to ", e);
+            throw new CustomWebApplicationException("could not determine organization accessibility on github, please re-link your github token", HttpStatus.SC_INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @Override
+    public Set<String> getOrganizationMemberships() {
+        try {
+            final Set<String> orgsAndAccount = new HashSet<>(github.getMyOrganizations().keySet());
+            orgsAndAccount.add(githubTokenUsername);
+            return orgsAndAccount;
         } catch (IOException e) {
             LOG.error("could not determine organization accessibility due to ", e);
             throw new CustomWebApplicationException("could not determine organization accessibility on github, please re-link your github token", HttpStatus.SC_INTERNAL_SERVER_ERROR);
@@ -366,11 +428,6 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
     @Override
     public boolean checkSourceControlTokenValidity() {
         try {
-            GHRateLimit ghRateLimit = github.getRateLimit();
-            if (ghRateLimit.getRemaining() == 0) {
-                ZonedDateTime zonedDateTime = Instant.ofEpochMilli(ghRateLimit.getResetDate().getTime()).atZone(ZoneId.systemDefault());
-                throw new CustomWebApplicationException(OUT_OF_GIT_HUB_RATE_LIMIT + ", please wait til " + zonedDateTime, HttpStatus.SC_BAD_REQUEST);
-            }
             github.getMyOrganizations();
         } catch (IOException e) {
             throw new CustomWebApplicationException(
@@ -411,33 +468,16 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @param subclass The subclass of the workflow (ex. docker-compose)
      * @return Service
      */
-    public Service initializeServiceFromGitHub(String repositoryId, String subclass) {
+    public Service initializeServiceFromGitHub(String repositoryId, String subclass, String workflowName) {
         Service service = new Service();
-        service.setOrganization(repositoryId.split("/")[0]);
-        service.setRepository(repositoryId.split("/")[1]);
-        service.setSourceControl(SourceControl.GITHUB);
-        service.setGitUrl("git@github.com:" + repositoryId + ".git");
-        service.setLastUpdated(new Date());
-        service.setDescriptorType(DescriptorLanguage.SERVICE);
-        service.setDefaultWorkflowPath(DOCKSTORE_YML_PATH);
-        service.setMode(WorkflowMode.DOCKSTORE_YML);
-        service.setTopicAutomatic(this.getTopic(repositoryId));
-        this.setLicenseInformation(service, repositoryId);
-        LicenseInformation licenseInformation = GitHubHelper.getLicenseInformation(github, service.getOrganization() + '/' + service.getRepository());
-        service.setLicenseInformation(licenseInformation);
-        // Validate subclass
-        if (subclass != null) {
-            DescriptorLanguageSubclass descriptorLanguageSubclass;
-            try {
-                descriptorLanguageSubclass = DescriptorLanguageSubclass.convertShortNameStringToEnum(subclass);
-            } catch (UnsupportedOperationException ex) {
-                // TODO: https://github.com/dockstore/dockstore/issues/3239
-                throw new CustomWebApplicationException("Subclass " + subclass + " is not a valid descriptor language subclass.", LAMBDA_FAILURE);
-            }
-            service.setDescriptorTypeSubclass(descriptorLanguageSubclass);
-        }
-
+        setWorkflowInfo(repositoryId, DescriptorLanguage.SERVICE.toString(), subclass, workflowName, service);
         return service;
+    }
+
+    public Notebook initializeNotebookFromGitHub(String repositoryId, String format, String language, String workflowName) {
+        Notebook notebook = new Notebook();
+        setWorkflowInfo(repositoryId, format, language, workflowName, notebook);
+        return notebook;
     }
 
     /**
@@ -447,44 +487,67 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @param workflowName Name of the workflow
      * @return Workflow
      */
-    public Workflow initializeWorkflowFromGitHub(String repositoryId, String subclass, String workflowName) {
+    public BioWorkflow initializeWorkflowFromGitHub(String repositoryId, String subclass, String workflowName) {
         BioWorkflow workflow = new BioWorkflow();
-        return setWorkflowInfo(repositoryId, subclass, workflowName, workflow);
+        setWorkflowInfo(repositoryId, subclass, DescriptorLanguageSubclass.NOT_APPLICABLE.toString(), workflowName, workflow);
+        return workflow;
     }
 
-    public Workflow initializeOneStepWorkflowFromGitHub(String repositoryId, String subclass, String workflowName) {
-        AppTool workflow = new AppTool();
-        return setWorkflowInfo(repositoryId, subclass, workflowName, workflow);
+    public AppTool initializeOneStepWorkflowFromGitHub(String repositoryId, String subclass, String workflowName) {
+        AppTool appTool = new AppTool();
+        setWorkflowInfo(repositoryId, subclass, DescriptorLanguageSubclass.NOT_APPLICABLE.toString(), workflowName, appTool);
+        return appTool;
     }
 
     /**
      * Initialize bioworkflow/apptool object for GitHub repository
      * @param repositoryId Organization and repository (ex. dockstore/dockstore-ui2)
-     * @param subclass Subclass of the workflow
+     * @param typeSubclass Subclass of the workflow
      * @param workflowName Name of the workflow
      * @param workflow Workflow to update
      * @return Workflow
      */
-    public Workflow setWorkflowInfo(final String repositoryId, final String subclass, final String workflowName,
-            final Workflow workflow) {
+    private void setWorkflowInfo(final String repositoryId, final String type, final String typeSubclass, final String workflowName, final Workflow workflow) {
+
+        workflow.setWorkflowName(workflowName);
         workflow.setOrganization(repositoryId.split("/")[0]);
         workflow.setRepository(repositoryId.split("/")[1]);
         workflow.setSourceControl(SourceControl.GITHUB);
         workflow.setGitUrl("git@github.com:" + repositoryId + ".git");
         workflow.setLastUpdated(new Date());
+        workflow.setDefaultWorkflowPath(DOCKSTORE_YML_PATH);
         workflow.setMode(WorkflowMode.DOCKSTORE_YML);
-        workflow.setWorkflowName(workflowName);
         workflow.setTopicAutomatic(this.getTopic(repositoryId));
         this.setLicenseInformation(workflow, repositoryId);
-        DescriptorLanguage descriptorLanguage;
+
+        // The checks/catches in the following blocks are all backups, they should not fail in normal operation.
+        // Thus, the error messages are more technical and less user-friendly.
         try {
-            descriptorLanguage = DescriptorLanguage.convertShortStringToEnum(subclass);
-            workflow.setDescriptorType(descriptorLanguage);
+            DescriptorLanguage descriptorLanguage = DescriptorLanguage.convertShortStringToEnum(type);
+            if (descriptorLanguage.getEntryTypes().contains(workflow.getEntryType())) {
+                workflow.setDescriptorType(descriptorLanguage);
+            } else {
+                logAndThrowLambdaFailure(String.format("The descriptor type %s is not supported by the %s", descriptorLanguage, workflow.getEntryType()));
+            }
         } catch (UnsupportedOperationException ex) {
-            throw new CustomWebApplicationException("The given descriptor type is not supported: " + subclass, LAMBDA_FAILURE);
+            logAndThrowLambdaFailure(String.format("Type %s is not a valid descriptor language.", type));
         }
-        workflow.setDefaultWorkflowPath(DOCKSTORE_YML_PATH);
-        return workflow;
+
+        try {
+            DescriptorLanguageSubclass descriptorLanguageSubclass = DescriptorLanguageSubclass.convertShortNameStringToEnum(typeSubclass);
+            if (descriptorLanguageSubclass.getEntryTypes().contains(workflow.getEntryType())) {
+                workflow.setDescriptorTypeSubclass(descriptorLanguageSubclass);
+            } else {
+                logAndThrowLambdaFailure(String.format("The descriptor type subclass %s is not supported by the %s", descriptorLanguageSubclass, workflow.getEntryType()));
+            }
+        } catch (UnsupportedOperationException ex) {
+            logAndThrowLambdaFailure(String.format("Subclass %s is not a valid descriptor language subclass.", typeSubclass));
+        }
+    }
+
+    private void logAndThrowLambdaFailure(String message) {
+        LOG.error(message);
+        throw new CustomWebApplicationException(message, LAMBDA_FAILURE);
     }
 
     /**
@@ -506,33 +569,31 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         GHRepository repository = getRepository(repositoryId);
 
         // when getting a full workflow, look for versions and check each version for valid workflows
-        List<Triple<String, Date, String>> references = new ArrayList<>();
+        List<GitReferenceInfo> references = new ArrayList<>();
 
         GHRef[] refs = {};
         try {
             refs = getBranchesAndTags(repository);
             for (GHRef ref : refs) {
-                Triple<String, Date, String> referenceTriple = getRef(ref, repository);
-                if (referenceTriple != null) {
-                    if (versionName.isEmpty() || Objects.equals(versionName.get(), referenceTriple.getLeft())) {
-                        references.add(referenceTriple);
-                    }
+                GitReferenceInfo gitReferenceInfo = getRef(ref, repository);
+                if (gitReferenceInfo != null && (versionName.isEmpty() || Objects.equals(versionName.get(), gitReferenceInfo.refName()))) {
+                    references.add(gitReferenceInfo);
                 }
             }
         } catch (GHFileNotFoundException e) {
             // seems to legitimately do this when the repo has no tags or releases
             LOG.debug("repo had no releases or tags: " + repositoryId, e);
         } catch (IOException e) {
-            LOG.info(gitUsername + ": Cannot get branches or tags for workflow {}", e);
+            LOG.info("%s: Cannot get branches or tags for workflow {}".formatted(gitUsername), e);
             throw new CustomWebApplicationException("Could not reach GitHub, please try again later", HttpStatus.SC_SERVICE_UNAVAILABLE);
         }
 
         // For each branch (reference) found, create a workflow version and find the associated descriptor files
-        for (Triple<String, Date, String> ref : references) {
+        for (GitReferenceInfo ref : references) {
             if (ref != null) {
-                final String branchName = ref.getLeft();
-                final Date lastModified = ref.getMiddle();
-                final String commitId = ref.getRight();
+                final String branchName = ref.refName();
+                final Date lastModified = ref.branchDate();
+                final String commitId = ref.sha();
                 if (toRefreshVersion(commitId, existingDefaults.get(branchName), hardRefresh)) {
                     WorkflowVersion version = setupWorkflowVersionsHelper(workflow, ref, existingWorkflow, existingDefaults,
                             repository, null, versionName);
@@ -542,7 +603,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
                 } else {
                     // Version didn't change, but we don't want to delete
                     // Add a stub version with commit ID set to an ignore value so that the version isn't deleted
-                    LOG.info(gitUsername + ": Skipping GitHub reference: " + ref.toString());
+                    LOG.info("%s: Skipping GitHub reference: %s".formatted(gitUsername, ref));
                     WorkflowVersion version = new WorkflowVersion();
                     version.setName(branchName);
                     version.setReference(branchName);
@@ -581,9 +642,9 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * Retrieve important information related to a reference
      * @param ref GitHub reference object
      * @param repository GitHub repository object
-     * @return Triple containing reference name, branch date, and SHA
+     * @return Record containing reference name, branch date, and SHA
      */
-    private Triple<String, Date, String> getRef(GHRef ref, GHRepository repository) {
+    private GitReferenceInfo getRef(GHRef ref, GHRepository repository) {
         final Date epochStart = new Date(0);
         Date branchDate = new Date(0);
         String refName = ref.getRef();
@@ -610,7 +671,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
             } catch (IOException e) {
                 LOG.error("unable to retrieve commit date for branch " + refName, e);
             }
-            return Triple.of(refName, branchDate, sha);
+            return new GitReferenceInfo(refName, branchDate, sha);
         } else {
             return null;
         }
@@ -641,7 +702,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
     /**
      * Creates a workflow version for a specific branch/tag on GitHub
      * @param workflow Workflow object
-     * @param ref Triple containing reference name, branch date, and SHA
+     * @param ref record containing reference name, branch date, and SHA
      * @param existingWorkflow Optional existing workflow
      * @param existingDefaults Optional mapping of existing versions
      * @param repository GitHub repository object
@@ -649,13 +710,13 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @param versionName Optional version name to refresh
      * @return WorkflowVersion for the given reference
      */
-    private WorkflowVersion setupWorkflowVersionsHelper(Workflow workflow, Triple<String, Date, String> ref, Optional<Workflow> existingWorkflow,
+    private WorkflowVersion setupWorkflowVersionsHelper(Workflow workflow, GitReferenceInfo ref, Optional<Workflow> existingWorkflow,
         Map<String, WorkflowVersion> existingDefaults, GHRepository repository, SourceFile dockstoreYml, Optional<String> versionName) {
         LOG.info(gitUsername + ": Looking at GitHub reference: " + ref.toString());
         // Initialize the workflow version
-        WorkflowVersion version = initializeWorkflowVersion(ref.getLeft(), existingWorkflow, existingDefaults);
-        version.setLastModified(ref.getMiddle());
-        version.setCommitID(ref.getRight());
+        WorkflowVersion version = initializeWorkflowVersion(ref.refName(), existingWorkflow, existingDefaults);
+        version.setLastModified(ref.branchDate());
+        version.setCommitID(ref.sha());
         String calculatedPath = version.getWorkflowPath();
 
         DescriptorLanguage.FileType identifiedType = workflow.getFileType();
@@ -685,7 +746,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
 
     /**
      * Grab files for workflow version based on the entry type
-     * @param ref Triple containing reference name, branch date, and SHA
+     * @param ref record containing reference name, branch date, and SHA
      * @param repository GitHub repository object
      * @param version Version to add source files to
      * @param workflow Workflow object
@@ -693,7 +754,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @param dockstoreYml Dockstore YML sourcefile
      * @return Updated workflow version
      */
-    private WorkflowVersion setupEntryFilesForGitHubVersion(Triple<String, Date, String> ref, GHRepository repository, WorkflowVersion version, Workflow workflow, Map<String, WorkflowVersion> existingDefaults, SourceFile dockstoreYml) {
+    private WorkflowVersion setupEntryFilesForGitHubVersion(GitReferenceInfo ref, GHRepository repository, WorkflowVersion version, Workflow workflow, Map<String, WorkflowVersion> existingDefaults, SourceFile dockstoreYml) {
         // Add Dockstore.yml to version
         SourceFile dockstoreYmlClone = new SourceFile();
         dockstoreYmlClone.setAbsolutePath(dockstoreYml.getAbsolutePath());
@@ -717,7 +778,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
     /**
      * Download workflow files for a given workflow version
      * @param calculatedPath Path to primary descriptor
-     * @param ref Triple containing reference name, branch date, and SHA
+     * @param ref record containing reference name, branch date, and SHA
      * @param repository GitHub repository object
      * @param version Version to update
      * @param identifiedType Descriptor type of file
@@ -726,11 +787,11 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @return Version with updated sourcefiles
      */
     @SuppressWarnings("checkstyle:ParameterNumber")
-    private WorkflowVersion setupWorkflowFilesForVersion(String calculatedPath, Triple<String, Date, String> ref, GHRepository repository, WorkflowVersion version, DescriptorLanguage.FileType identifiedType, Workflow workflow, Map<String, WorkflowVersion> existingDefaults) {
+    private WorkflowVersion setupWorkflowFilesForVersion(String calculatedPath, GitReferenceInfo ref, GHRepository repository, WorkflowVersion version, DescriptorLanguage.FileType identifiedType, Workflow workflow, Map<String, WorkflowVersion> existingDefaults) {
         // Grab workflow file from github
         try {
             // Get contents of descriptor file and store
-            String decodedContent = this.readFileFromRepo(calculatedPath, ref.getLeft(), repository);
+            String decodedContent = this.readFileFromRepo(calculatedPath, ref.refName(), repository);
             if (decodedContent != null) {
                 SourceFile file = new SourceFile();
                 file.setContent(decodedContent);
@@ -742,7 +803,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
                 // Use default test parameter file if either new version or existing version that hasn't been edited
                 // TODO: why is this here? Does this code not have a counterpart in BitBucket and GitLab?
                 if (!version.isDirtyBit() && workflow.getDefaultTestParameterFilePath() != null) {
-                    String testJsonContent = this.readFileFromRepo(workflow.getDefaultTestParameterFilePath(), ref.getLeft(), repository);
+                    String testJsonContent = this.readFileFromRepo(workflow.getDefaultTestParameterFilePath(), ref.refName(), repository);
                     if (testJsonContent != null) {
                         SourceFile testJson = new SourceFile();
                         testJson.setType(workflow.getDescriptorType().getTestParamType());
@@ -768,13 +829,13 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
 
     /**
      * Pull descriptor files for the given service version and add to version
-     * @param ref Triple containing reference name, branch date, and SHA
+     * @param ref record containing reference name, branch date, and SHA
      * @param repository GitHub repository object
      * @param version Version to update
      * @param dockstoreYml Dockstore YML sourcefile
      * @return Version with updated sourcefiles
      */
-    private WorkflowVersion setupServiceFilesForGitHubVersion(Triple<String, Date, String> ref, GHRepository repository, WorkflowVersion version, SourceFile dockstoreYml) {
+    private WorkflowVersion setupServiceFilesForGitHubVersion(GitReferenceInfo ref, GHRepository repository, WorkflowVersion version, SourceFile dockstoreYml) {
         // Grab all files from files array
         List<String> files;
         try {
@@ -793,7 +854,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
             return null;
         }
         for (String filePath: files) {
-            String fileContent = this.readFileFromRepo(filePath, ref.getLeft(), repository);
+            String fileContent = this.readFileFromRepo(filePath, ref.refName(), repository);
             if (fileContent != null) {
                 SourceFile file = new SourceFile();
                 file.setAbsolutePath(filePath);
@@ -812,7 +873,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
 
     /**
      * Pull descriptor files for the given workflow version and add to version
-     * @param ref Triple containing reference name, branch date, and SHA
+     * @param ref record containing reference name, branch date, and SHA
      * @param repository GitHub repository object
      * @param version Version to update
      * @param workflow Workflow to add version to
@@ -820,28 +881,30 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
      * @param dockstoreYml Dockstore YML sourcefile
      * @return Version with updated sourcefiles
      */
-    private WorkflowVersion setupWorkflowFilesForGitHubVersion(Triple<String, Date, String> ref, GHRepository repository, WorkflowVersion version, Workflow workflow, Map<String, WorkflowVersion> existingDefaults, SourceFile dockstoreYml) {
+    private WorkflowVersion setupWorkflowFilesForGitHubVersion(GitReferenceInfo ref, GHRepository repository, WorkflowVersion version, Workflow workflow, Map<String, WorkflowVersion> existingDefaults, SourceFile dockstoreYml) {
         // Determine version information from dockstore.yml
-        YamlWorkflow theWf = null;
+        Workflowish theWf = null;
         List<String> testParameterPaths = null;
         try {
             final DockstoreYaml12 dockstoreYaml12 = DockstoreYamlHelper.readAsDockstoreYaml12(dockstoreYml.getContent());
             // TODO: Need to handle services; the YAML is guaranteed to have at least one of either
-            List<YamlWorkflow> workflows;
-            if (workflow instanceof AppTool) {
+            List<? extends Workflowish> workflows;
+            if (workflow instanceof Notebook) {
+                workflows = dockstoreYaml12.getNotebooks();
+            } else if (workflow instanceof AppTool) {
                 workflows = dockstoreYaml12.getTools();
             } else {
                 workflows = dockstoreYaml12.getWorkflows();
             }
 
-            final Optional<YamlWorkflow> maybeWorkflow = workflows.stream().filter(wf -> {
+            final Optional<? extends Workflowish> maybeWorkflow = workflows.stream().filter(wf -> {
                 final String wfName = wf.getName();
                 final String dockstoreWorkflowPath =
                         "github.com/" + repository.getFullName() + (wfName != null && !wfName.isEmpty() ? "/" + wfName : "");
 
                 return (Objects.equals(dockstoreWorkflowPath, workflow.getEntryPath()));
             }).findFirst();
-            if (!maybeWorkflow.isPresent()) {
+            if (maybeWorkflow.isEmpty()) {
                 return null;
             }
             theWf = maybeWorkflow.get();
@@ -852,13 +915,20 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
             return null;
         }
 
+        // If this is a notebook, set the version's user-specified files and image.
+        if (theWf instanceof YamlNotebook yamlNotebook) {
+            version.setUserFiles(yamlNotebook.getOtherFiles());
+            version.setKernelImagePath(yamlNotebook.getKernel());
+        }
+
         // No need to check for null, has been validated
         String primaryDescriptorPath = theWf.getPrimaryDescriptorPath();
-
         version.setWorkflowPath(primaryDescriptorPath);
+        String readMePath = theWf.getReadMePath();
+        version.setReadMePath(readMePath);
 
         String validationMessage = "";
-        String fileContent = this.readFileFromRepo(primaryDescriptorPath, ref.getLeft(), repository);
+        String fileContent = this.readFileFromRepo(primaryDescriptorPath, ref.refName(), repository);
         if (fileContent != null) {
             // Add primary descriptor file and resolve imports
             SourceFile primaryDescriptorFile = new SourceFile();
@@ -878,7 +948,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
                     if (hasDuplicate) {
                         continue;
                     }
-                    String testFileContent = this.readFileFromRepo(testParameterPath, ref.getLeft(), repository);
+                    String testFileContent = this.readFileFromRepo(testParameterPath, ref.refName(), repository);
                     if (testFileContent != null) {
                         SourceFile testFile = new SourceFile();
                         // find type from file type
@@ -951,7 +1021,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         throw new CustomWebApplicationException("Could not retrieve .dockstore.yml. Does the tag exist and have a .dockstore.yml?", LAMBDA_FAILURE);
     }
 
-    private void reportOnRateLimit(String id, GHRateLimit startRateLimit, GHRateLimit endRateLimit) {
+    public void reportOnRateLimit(String id, GHRateLimit startRateLimit, GHRateLimit endRateLimit) {
         if (startRateLimit != null && endRateLimit != null) {
             int used = startRateLimit.getRemaining() - endRateLimit.getRemaining();
             if (used > 0) {
@@ -1039,20 +1109,16 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         }
     }
 
+
+
     @Override
     public String getMainBranch(Entry entry, String repositoryId) {
         String mainBranch = null;
 
         // Get repository based on username and repo id
-        if (repositoryId != null) {
-            try {
-                GHRepository repository = github.getRepository(repositoryId);
-                // Determine the default branch on Github
-                mainBranch = repository.getDefaultBranch();
-            } catch (IOException e) {
-                LOG.error("Unable to retrieve default branch for repository " + repositoryId, e);
-                return null;
-            }
+        mainBranch = getDefaultBranch(repositoryId);
+        if (mainBranch == null) {
+            return null;
         }
         // Determine which branch to use for tool info
         if (entry.getDefaultVersion() != null) {
@@ -1060,6 +1126,125 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         }
 
         return mainBranch;
+    }
+
+    @Override
+    public String getDefaultBranch(String repositoryId) {
+        if (repositoryId != null) {
+            try {
+                GHRepository repository = github.getRepository(repositoryId);
+                // Determine the default branch on GitHub
+                return repository.getDefaultBranch();
+            } catch (IOException e) {
+                LOG.error("Unable to retrieve default branch for repository " + repositoryId, e);
+                return null;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Detect branches that include a .dockstore.yml using a variety of heuristics.
+     * Heuristics include the default branch, branches that are likely active or important, and branches with recent pushes.
+     * Tries to avoid an unbounded number of calls based on factors that can change between repos (number of tags, branches, etc.)
+     */
+    public Set<String> detectDockstoreYml(String repositoryId) {
+        final int maxResults = 5;
+        final Set<String> likelies = Set.of("master", "main", "develop");
+
+        try {
+            if (repositoryId == null) {
+                return Set.of();
+            }
+            // Get repository and default branch.
+            GHRepository repository = getRepository(repositoryId);
+            String defaultBranch = repository.getDefaultBranch();
+
+            // Get the branch names, ordered so that branches with recent pushes are first.
+            List<String> branches = getBranchesWithRecentPushesFirst(repository);
+
+            // Reorder the branch names so the default branch comes first, followed by any "likely" branches, then the rest.
+            // Do so by first moving the likelies to the front, and then moving the default branch to the front.
+            branches = listTrueFirst(branches, likelies::contains);
+            branches = listTrueFirst(branches, branch -> Objects.equals(defaultBranch, branch));
+
+            // For a subset of branches at the front of the list, return a set of the corresponding refs that contain a .dockstore.yml.
+            return branches.stream()
+                .limit(maxResults)
+                .map(branch -> REFS_HEADS + branch)
+                .filter(ref -> hasDockstoreYml(repository, ref))
+                .collect(Collectors.toSet());
+
+        } catch (IOException | GHException e) {
+            LOG.error("Unable to retrieve/analyze branch candidates for repository " + repositoryId, e);
+            return Set.of();
+        }
+    }
+
+    /**
+     * Retrieve the list of branches by examining the repo refs and events.
+     * Attempt to order the list so that the most-recently-pushed-to branches appear first.
+     * This method caps the number of refs and events retrieved, so that we don't chew up our rate limit on
+     * a repo with a large number of either.
+     */
+    private List<String> getBranchesWithRecentPushesFirst(GHRepository repository) throws IOException {
+        final int maxRefs = 120;
+        final int maxEvents = 30;
+
+        // Create a linked set to store the results.
+        // It's important that we use a Linked set, because it preserves the order in which elements are added.
+        Set<String> branches = new LinkedHashSet<>();
+
+        // Get a list of the most recent pushes, which should be ordered by increasing age.
+        List<GHEventInfo> pushes = streamIterable(repository.listEvents())
+            .limit(maxEvents)
+            .filter(event -> event.getType().equals(GHEvent.PUSH))
+            .toList();
+
+        // For each push to a branch, add the branch name to the "end" of the linked set.
+        // The code within can throw a checked IOException, so it's clumsy to combine with the previous stream expression.
+        for (GHEventInfo push: pushes) {
+            // Get the ref of the pushed-to branch, typically a value like 'refs/heads/master'
+            String ref = push.getPayload(GHEventPayload.Push.class).getRef();
+            if (ref.startsWith(REFS_HEADS)) {
+                branches.add(ref.substring(REFS_HEADS.length()));
+            }
+        }
+
+        // Add the rest of the branch names to the "end" of the linked set.
+        branches.addAll(getBranches(repository, maxRefs));
+
+        // Convert to a list and return.
+        return new ArrayList<>(branches);
+    }
+
+    private List<String> getBranches(GHRepository repository, int maxRefs) throws IOException {
+        return streamIterable(repository.listRefs())
+            .limit(maxRefs)
+            .map(ref -> ref.getRef())
+            .filter(ref -> ref.startsWith(REFS_HEADS))
+            .map(ref -> ref.substring(REFS_HEADS.length()))
+            .toList();
+    }
+
+    private <T> Stream<T> streamIterable(Iterable<T> iterable) {
+        return StreamSupport.stream(Spliterators.spliteratorUnknownSize(iterable.iterator(), Spliterator.ORDERED), false);
+    }
+
+    private <T> List<T> listTrueFirst(List<T> src, Predicate<T> predicate) {
+        return Stream.concat(src.stream().filter(predicate), src.stream().filter(Predicate.not(predicate))).toList();
+    }
+
+    private boolean hasDockstoreYml(GHRepository repository, String ref) {
+        return hasPath(repository, ref, DOCKSTORE_YML_PATH) || hasPath(repository, ref, DOCKSTORE_ALTERNATE_YML_PATH);
+    }
+
+    private boolean hasPath(GHRepository repository, String ref, String path) {
+        try {
+            return repository.queryCommits().path(path).from(ref).pageSize(1).list().iterator().hasNext();
+        } catch (GHException e) {
+            return false;
+        }
     }
 
     @Override
@@ -1219,9 +1404,8 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
     public WorkflowVersion createVersionForWorkflow(String repository, String gitReference, Workflow workflow, SourceFile dockstoreYml) throws IOException {
         GHRepository ghRepository = getRepository(repository);
 
-        // Match the github reference (ex. refs/heads/feature/foobar or refs/tags/1.0)
-        Pattern pattern = Pattern.compile("^refs/(tags|heads)/([a-zA-Z0-9]+([./_-]?[a-zA-Z0-9]+)*)$");
-        Matcher matcher = pattern.matcher(gitReference);
+        // Match the GitHub reference (ex. refs/heads/feature/foobar or refs/tags/1.0)
+        Matcher matcher = GIT_BRANCH_TAG_PATTERN.matcher(gitReference);
 
         if (!matcher.find()) {
             throw new CustomWebApplicationException("Reference " + gitReference + " is not of the valid form", LAMBDA_FAILURE);
@@ -1231,7 +1415,7 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
 
         GHRef ghRef = ghRepository.getRef(gitBranchType + "/" + gitBranchName);
 
-        Triple<String, Date, String> ref = getRef(ghRef, ghRepository);
+        GitReferenceInfo ref = getRef(ghRef, ghRepository);
         if (ref == null) {
             throw new CustomWebApplicationException("Cannot retrieve the workflow reference from GitHub, ensure that " + gitReference + " is a valid branch/tag.",
                     LAMBDA_FAILURE);
@@ -1243,13 +1427,25 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         return setupWorkflowVersionsHelper(workflow, ref, Optional.of(workflow), existingDefaults, ghRepository, dockstoreYml, Optional.empty());
     }
 
+    private static final class FailAbuseLimitHandler extends GitHubAbuseLimitHandler {
+        private final String username;
+
+        private FailAbuseLimitHandler(String username) {
+            this.username = username;
+        }
+
+        @Override
+        public void onError(GitHubConnectorResponse connectorResponse) {
+            LOG.error(GITHUB_ABUSE_LIMIT_REACHED + " for " + username);
+            throw new CustomWebApplicationException(GITHUB_ABUSE_LIMIT_REACHED, HttpStatus.SC_BAD_REQUEST);
+        }
+    }
+
     /**
-     * Not using org.kohsuke.github.RateLimitHandler.FAIL directly because
-     *
      * 1. This logs username
      * 2. We control the string in the error message
      */
-    private static final class FailRateLimitHandler extends RateLimitHandler {
+    private static final class FailRateLimitHandler extends GitHubRateLimitHandler {
 
         private final String username;
 
@@ -1258,10 +1454,11 @@ public class GitHubSourceCodeRepo extends SourceCodeRepoInterface {
         }
 
         @Override
-        public void onError(IOException e, HttpURLConnection uc) {
+        public void onError(GitHubConnectorResponse connectorResponse) {
             LOG.error(OUT_OF_GIT_HUB_RATE_LIMIT + " for " + username);
             throw new CustomWebApplicationException(OUT_OF_GIT_HUB_RATE_LIMIT, HttpStatus.SC_BAD_REQUEST);
         }
-
     }
+
+    private record GitReferenceInfo (String refName, Date branchDate, String sha) {}
 }
