@@ -65,7 +65,6 @@ import io.dockstore.webservice.helpers.SourceCodeRepoFactory;
 import io.dockstore.webservice.helpers.SourceCodeRepoInterface;
 import io.dockstore.webservice.helpers.StateManagerMode;
 import io.dockstore.webservice.helpers.StringInputValidationHelper;
-import io.dockstore.webservice.helpers.URIHelper;
 import io.dockstore.webservice.helpers.ZenodoHelper;
 import io.dockstore.webservice.jdbi.BioWorkflowDAO;
 import io.dockstore.webservice.jdbi.EntryDAO;
@@ -167,10 +166,12 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
     private static final String VERSIONS = "versions";
     private static final String AUTHORS = "authors";
     private static final String ORCID_PUT_CODES = "orcidputcodes";
-    private static final String VERSION_INCLUDE = VALIDATIONS + ", " + ALIASES + ", " + IMAGES + ", " + AUTHORS;
+    private static final String METRICS = "metrics";
+    private static final String VERSION_INCLUDE = VALIDATIONS + ", " + ALIASES + ", " + IMAGES + ", " + AUTHORS + ", " + METRICS;
+    private static final List<String> VERSION_INCLUDE_LIST = List.of(VERSION_INCLUDE.split(", "));
     private static final String WORKFLOW_INCLUDE = VERSIONS + ", " + ORCID_PUT_CODES + ", " + VERSION_INCLUDE;
     private static final String VERSION_INCLUDE_MESSAGE = "Comma-delimited list of fields to include: " + VERSION_INCLUDE;
-    private static final String WORKFLOW_INCLUDE_MESSAGE = "Comma-delimited list of fields to include: " + WORKFLOW_INCLUDE + ", " + VERSION_INCLUDE;
+    private static final String WORKFLOW_INCLUDE_MESSAGE = "Comma-delimited list of fields to include: " + WORKFLOW_INCLUDE;
     public static final String A_WORKFLOW_MUST_BE_UNPUBLISHED_TO_RESTUB = "A workflow must be unpublished to restub.";
     public static final String A_WORKFLOW_MUST_HAVE_NO_DOI_TO_RESTUB = "A workflow must have no issued DOIs to restub";
     public static final String A_WORKFLOW_MUST_HAVE_NO_SNAPSHOT_TO_RESTUB = "A workflow must have no snapshots to restub, you may consider unpublishing";
@@ -210,8 +211,7 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         zenodoClientSecret = configuration.getZenodoClientSecret();
         dashboardPrefix = configuration.getDashboard();
 
-        dockstoreUrl = URIHelper.createBaseUrl(configuration.getExternalConfig().getScheme(),
-            configuration.getExternalConfig().getHostname(), configuration.getExternalConfig().getUiPort());
+        dockstoreUrl = configuration.getExternalConfig().computeBaseUrl();
 
         try {
             dockstoreGA4GHBaseUrl = ToolsImplCommon.baseURL(configuration);
@@ -515,7 +515,7 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         }
 
         updateInfo(wf, workflow);
-        wf.getWorkflowVersions().stream().forEach(workflowVersion -> workflowVersion.setSynced(false));
+        wf.getWorkflowVersions().forEach(workflowVersion -> workflowVersion.setSynced(false));
         Workflow result = workflowDAO.findById(workflowId);
         checkNotNullEntry(result);
         PublicStateManager.getInstance().handleIndexUpdate(result, StateManagerMode.UPDATE);
@@ -803,17 +803,18 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @ApiParam(value = "Filter, this is a search string that filters the results.") @DefaultValue("") @QueryParam("filter") String filter,
         @ApiParam(value = "Sort column") @DefaultValue("stars") @QueryParam("sortCol") String sortCol,
         @ApiParam(value = "Sort order", allowableValues = "asc,desc") @DefaultValue("desc") @QueryParam("sortOrder") String sortOrder,
-        @ApiParam(value = "Should only be used by Dockstore CLI versions < 1.12.0. Indicates whether to get a service or workflow") @DefaultValue("false") @QueryParam("services") boolean services,
+        @ApiParam(value = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to get a service or workflow") @DefaultValue("false") @QueryParam("services") boolean services,
         @ApiParam(value = "Which workflow subclass to retrieve. If present takes precedence over services parameter") @QueryParam("subclass") WorkflowSubClass subclass,
         @Context HttpServletResponse response) {
         // delete the next line if GUI pagination is not working by 1.5.0 release
         int maxLimit = Math.min(Integer.parseInt(PAGINATION_LIMIT), limit);
+        final Class<Workflow> workflowClass = (Class<Workflow>) workflowSubClass(services, subclass);
         List<Workflow> workflows = workflowDAO.findAllPublished(offset, maxLimit, filter, sortCol, sortOrder,
-            (Class<Workflow>) workflowSubClass(services, subclass));
+            workflowClass);
         filterContainersForHiddenTags(workflows);
         stripContent(workflows);
         EntryDAO entryDAO = services ? serviceEntryDAO : bioWorkflowDAO;
-        response.addHeader("X-total-count", String.valueOf(entryDAO.countAllPublished(Optional.of(filter))));
+        response.addHeader("X-total-count", String.valueOf(entryDAO.countAllPublished(Optional.of(filter), workflowClass)));
         response.addHeader("Access-Control-Expose-Headers", "X-total-count");
         return workflows;
     }
@@ -858,34 +859,14 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @Parameter(name = "repository", description = "Repository path", required = true, in = ParameterIn.PATH) @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
         @Parameter(name = "include", description = WORKFLOW_INCLUDE_MESSAGE, in = ParameterIn.QUERY) @ApiParam(value = WORKFLOW_INCLUDE_MESSAGE) @QueryParam("include") String include,
         @Parameter(name = "subclass", description = "Which Workflow subclass to retrieve.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to retrieve.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
-        @Parameter(name = "services", description = "Should only be used by Dockstore CLI versions < 1.12.0. Indicates whether to get a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
-        final Class<? extends Workflow> targetClass;
-        if (services != null) {
-            targetClass = services ? Service.class : BioWorkflow.class;
-        } else {
-            targetClass = getSubClass(subclass);
-        }
-
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to get a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, false, targetClass).orElse(null);
         checkNotNullEntry(workflow);
         checkCanExamine(user, workflow);
         Hibernate.initialize(workflow.getAliases());
         initializeAdditionalFields(include, workflow);
         return workflow;
-    }
-
-    private Class<? extends Workflow> getSubClass(WorkflowSubClass subclass) {
-        final Class<? extends Workflow> targetClass;
-        if (subclass == WorkflowSubClass.SERVICE) {
-            targetClass = Service.class;
-        } else if (subclass == WorkflowSubClass.BIOWORKFLOW) {
-            targetClass = BioWorkflow.class;
-        } else if (subclass == WorkflowSubClass.APPTOOL) {
-            targetClass = AppTool.class;
-        } else {
-            throw new CustomWebApplicationException(subclass + " is not a valid subclass.", HttpStatus.SC_BAD_REQUEST);
-        }
-        return targetClass;
     }
 
     @SuppressWarnings("checkstyle:MagicNumber")
@@ -948,8 +929,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @Authorization(value = JWT_SECURITY_DEFINITION_NAME)}, notes = "The user must be the workflow owner.", response = Permission.class, responseContainer = "List")
     public List<Permission> getWorkflowPermissions(@ApiParam(hidden = true) @Parameter(hidden = true, name = "user") @Auth User user,
         @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
-        @ApiParam(value = "services", defaultValue = "false") @DefaultValue("false") @QueryParam("services") boolean services) {
-        final Class<? extends Workflow> targetClass = services ? Service.class : BioWorkflow.class;
+        @Parameter(name = "subclass", description = "Which Workflow subclass to retrieve permissions for.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to retrieve permissions for.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to retrieve permissions for a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, false, targetClass).orElse(null);
         checkNotNullEntry(workflow);
         return this.permissionsInterface.getPermissionsForWorkflow(user, workflow);
@@ -964,15 +946,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @Authorization(value = JWT_SECURITY_DEFINITION_NAME)}, response = Role.Action.class, responseContainer = "List")
     public List<Role.Action> getWorkflowActions(@ApiParam(hidden = true) @Parameter(hidden = true, name = "user") @Auth User user,
         @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
-        @Parameter(name = "subclass", description = "Which Workflow subclass to retrieve.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to retrieve.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
-        @Parameter(name = "services", description = "Should only be used by Dockstore CLI versions < 1.12.0. Indicates whether to get a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
-        final Class<? extends Workflow> targetClass;
-        if (services != null) {
-            targetClass = services ? Service.class : BioWorkflow.class;
-        } else {
-            targetClass = getSubClass(subclass);
-        }
-
+        @Parameter(name = "subclass", description = "Which Workflow subclass to retrieve actions for.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to retrieve actions for.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to get actions for a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, false, targetClass).orElse(null);
         checkNotNullEntry(workflow);
         return this.permissionsInterface.getActionsForWorkflow(user, workflow);
@@ -989,8 +965,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
     public List<Permission> addWorkflowPermission(@ApiParam(hidden = true) @Parameter(hidden = true, name = "user") @Auth User user,
         @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
         @ApiParam(value = "user permission", required = true) Permission permission,
-        @ApiParam(value = "services", defaultValue = "false") @DefaultValue("false") @QueryParam("services") boolean services) {
-        final Class<? extends Workflow> targetClass = services ? Service.class : BioWorkflow.class;
+        @Parameter(name = "subclass", description = "Which Workflow subclass to add a permission to.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to add a permission to.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to add a permission to a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, false, targetClass).orElse(null);
         checkNotNullEntry(workflow);
         // TODO: Remove this guard when ready to expand sharing to non-hosted workflows. https://github.com/dockstore/dockstore/issues/1593
@@ -1011,8 +988,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
         @ApiParam(value = "user email", required = true) @QueryParam("email") String email,
         @ApiParam(value = "role", required = true) @QueryParam("role") Role role,
-        @ApiParam(value = "services", defaultValue = "false") @DefaultValue("false") @QueryParam("services") boolean services) {
-        final Class<? extends Workflow> targetClass = services ? Service.class : BioWorkflow.class;
+        @Parameter(name = "subclass", description = "Which Workflow subclass to remove a role from.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to remove a role from.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to remove a role from a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services) {
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, false, targetClass).orElse(null);
         checkNotNullEntry(workflow);
         this.permissionsInterface.removePermission(user, workflow, email, role);
@@ -1085,14 +1063,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         @Parameter(name = "repository", description = "Repository path", required = true, in = ParameterIn.PATH) @ApiParam(value = "repository path", required = true) @PathParam("repository") String path,
         @Parameter(name = "include", description = WORKFLOW_INCLUDE_MESSAGE, in = ParameterIn.QUERY) @ApiParam(value = WORKFLOW_INCLUDE_MESSAGE) @QueryParam("include") String include,
         @Parameter(name = "subclass", description = "Which Workflow subclass to retrieve.", in = ParameterIn.QUERY, required = true) @ApiParam(value = "Which Workflow subclass to retrieve.", required = true) @QueryParam("subclass") WorkflowSubClass subclass,
-        @Parameter(name = "services", description = "Should only be used by Dockstore CLI versions < 1.12.0. Indicates whether to get a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services,
+        @Parameter(name = "services", description = "Should only be used by Dockstore versions < 1.14.0. Indicates whether to get a service or workflow", in = ParameterIn.QUERY, hidden = true, deprecated = true) @ApiParam(value = "services", hidden = true) @QueryParam("services") Boolean services,
         @Parameter(name = "versionName", description = "Version name", in = ParameterIn.QUERY) @ApiParam(value = "Version name") @QueryParam("versionName") String versionName) {
-        final Class<? extends Workflow> targetClass;
-        if (services != null) {
-            targetClass = services ? Service.class : BioWorkflow.class;
-        } else {
-            targetClass = getSubClass(subclass);
-        }
+        final Class<? extends Workflow> targetClass = workflowSubClass(services, subclass);
         Workflow workflow = workflowDAO.findByPath(path, true, targetClass).orElse(null);
         checkNotNullEntry(workflow);
 
@@ -1853,20 +1826,13 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
      * @param workflow
      */
     private void initializeAdditionalFields(String include, Workflow workflow) {
-        if (checkIncludes(include, VALIDATIONS)) {
-            workflow.getWorkflowVersions().forEach(workflowVersion -> Hibernate.initialize(workflowVersion.getValidations()));
+        final boolean containsVersionIncludes = VERSION_INCLUDE_LIST.stream().anyMatch(versionInclude -> checkIncludes(include, versionInclude));
+        if (containsVersionIncludes) {
+            workflow.getWorkflowVersions().forEach(workflowVersion -> initializeAdditionalFields(include, workflowVersion));
         }
-        if (checkIncludes(include, ALIASES)) {
-            workflow.getWorkflowVersions().forEach(workflowVersion -> Hibernate.initialize(workflowVersion.getAliases()));
-        }
-        if (checkIncludes(include, IMAGES)) {
-            workflow.getWorkflowVersions().stream().filter(Version::isFrozen).forEach(workflowVersion -> Hibernate.initialize(workflowVersion.getImages()));
-        }
+
         if (checkIncludes(include, VERSIONS)) {
             Hibernate.initialize(workflow.getWorkflowVersions());
-        }
-        if (checkIncludes(include, AUTHORS)) {
-            workflow.getWorkflowVersions().forEach(workflowVersion -> Hibernate.initialize(workflowVersion.getOrcidAuthors()));
         }
         if (checkIncludes(include, ORCID_PUT_CODES)) {
             Hibernate.initialize(workflow.getUserIdToOrcidPutCode());
@@ -1893,13 +1859,16 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         if (checkIncludes(include, AUTHORS)) {
             Hibernate.initialize(workflowVersion.getOrcidAuthors());
         }
+        if (checkIncludes(include, METRICS)) {
+            Hibernate.initialize(workflowVersion.getMetricsByPlatform());
+        }
     }
 
-    private Class<? extends Workflow> workflowSubClass(boolean services, WorkflowSubClass subClass) {
+    private Class<? extends Workflow> workflowSubClass(Boolean services, WorkflowSubClass subClass) {
         if (subClass != null) {
-            return getSubClass(subClass);
+            return subClass.getTargetClass();
         }
-        return services ? Service.class : BioWorkflow.class;
+        return (services != null && services.booleanValue()) ? Service.class : BioWorkflow.class;
     }
 
     @Override
@@ -2045,7 +2014,7 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         List<Token> scTokens = this.tokenDAO.findByUserId(foundUser.getId())
             .stream()
             .filter(token -> Objects.equals(token.getTokenSource().getSourceControl(), gitRegistry))
-            .collect(Collectors.toList());
+            .toList();
 
         if (scTokens.size() == 0) {
             LOG.error(SC_REGISTRY_ACCESS_MESSAGE);
@@ -2099,7 +2068,7 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         if (LOG.isInfoEnabled()) {
             LOG.info(String.format("Branch/tag %s pushed to %s(%s)", Utilities.cleanForLogging(gitReference), Utilities.cleanForLogging(repository), Utilities.cleanForLogging(username)));
         }
-        githubWebhookRelease(repository, username, gitReference, installationId);
+        githubWebhookRelease(repository, username, gitReference, Long.parseLong(installationId), true);
     }
 
     @POST
@@ -2118,8 +2087,9 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
         if (LOG.isInfoEnabled()) {
             LOG.info(String.format("GitHub app installed on the repositories %s(%s)", Utilities.cleanForLogging(repositories), Utilities.cleanForLogging(username)));
         }
+        // record installation event as lambda event
         Optional<User> triggerUser = Optional.ofNullable(userDAO.findByGitHubUsername(username));
-        Arrays.asList(repositories.split(",")).stream().forEach(repository -> {
+        Arrays.asList(repositories.split(",")).forEach(repository -> {
             LambdaEvent lambdaEvent = new LambdaEvent();
             String[] splitRepository = repository.split("/");
             lambdaEvent.setOrganization(splitRepository[0]);
@@ -2129,6 +2099,18 @@ public class WorkflowResource extends AbstractWorkflowResource<Workflow>
             triggerUser.ifPresent(lambdaEvent::setUser);
             lambdaEventDAO.create(lambdaEvent);
         });
+        // make some educated guesses whether we should try to retrospectively release some old versions
+        // note that for large organizations, this loop could be quite large if many repositories are added at the same time
+        for (String repository: repositories.split(",")) {
+            final Set<String> strings = identifyGitReferencesToRelease(repository, Long.parseLong(installationId));
+            for (String gitReference: strings) {
+                if (LOG.isInfoEnabled()) {
+                    LOG.info(String.format("Retrospectively processing branch/tag %s in %s(%s)", Utilities.cleanForLogging(gitReference), Utilities.cleanForLogging(repository),
+                        Utilities.cleanForLogging(username)));
+                }
+                githubWebhookRelease(repository, username, gitReference, Long.parseLong(installationId), false);
+            }
+        }
         return Response.status(HttpStatus.SC_OK).build();
     }
 
