@@ -15,7 +15,7 @@
  */
 package io.openapi.api.impl;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import io.dockstore.common.DescriptorLanguage;
 import io.dockstore.common.DescriptorLanguage.FileType;
@@ -38,20 +38,18 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import org.junit.Assert;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author wshands
  * @since 07/06/22
  */
-public class ToolsImplCommonTest {
+class ToolsImplCommonTest {
     private static final String PLACEHOLDER_CONTENT = "potato";
     private static DockstoreWebserviceConfiguration actualConfig = new DockstoreWebserviceConfiguration();
 
-    @BeforeClass
+    @BeforeAll
     public static void setup() {
         actualConfig.getExternalConfig().setHostname("localhost");
         actualConfig.getExternalConfig().setPort("8080");
@@ -90,7 +88,7 @@ public class ToolsImplCommonTest {
     }
 
     @Test
-    public void testGalaxyConversion() {
+    void testGalaxyConversion() {
         Workflow workflow = new BioWorkflow();
         workflow.setSourceControl(SourceControl.GITHUB);
         workflow.setRepository("fakeRepository");
@@ -125,7 +123,7 @@ public class ToolsImplCommonTest {
      */
 
     @Test
-    public void processImageDataForToolVersionTest() {
+    void processImageDataForToolVersionTest() {
         io.dockstore.webservice.core.Tool tool = new io.dockstore.webservice.core.Tool();
         Tag tag = new Tag();
         Image image = new Image(new ArrayList<>(), "dummy", "dummy", "a", Registry.QUAY_IO, 1L, "now");
@@ -138,22 +136,22 @@ public class ToolsImplCommonTest {
         io.openapi.model.ToolVersion toolVersion = new io.openapi.model.ToolVersion();
         toolVersion.setImages(new ArrayList<>());
         ToolsImplCommon.processImageDataForToolVersion(tool, tag, toolVersion);
-        Assert.assertEquals("There should be the same amount of images as the Tag", 2, toolVersion.getImages().size());
-        List<Long> sortedSizes = toolVersion.getImages().stream().map(ImageData::getSize).sorted().collect(Collectors.toList());
-        Assert.assertEquals(Long.valueOf(1L), sortedSizes.get(0));
-        Assert.assertEquals(Long.valueOf(2L), sortedSizes.get(1));
+        assertEquals(2, toolVersion.getImages().size(), "There should be the same amount of images as the Tag");
+        List<Long> sortedSizes = toolVersion.getImages().stream().map(ImageData::getSize).sorted().toList();
+        assertEquals(Long.valueOf(1L), sortedSizes.get(0));
+        assertEquals(Long.valueOf(2L), sortedSizes.get(1));
         toolVersion = new io.openapi.model.ToolVersion();
         tag.setImages(new HashSet<>());
         tool = new io.dockstore.webservice.core.Tool();
         tool.addWorkflowVersion(tag);
         toolVersion.setImages(new ArrayList<>());
         ToolsImplCommon.processImageDataForToolVersion(tool, tag, toolVersion);
-        Assert.assertEquals("There should be one default image when the Tag has none", 1, toolVersion.getImages().size());
-        Assert.assertEquals(Long.valueOf(0L), toolVersion.getImages().get(0).getSize());
+        assertEquals(1, toolVersion.getImages().size(), "There should be one default image when the Tag has none");
+        assertEquals(Long.valueOf(0L), toolVersion.getImages().get(0).getSize());
     }
 
     @Test
-    public void getDescriptorTypeFromFileTypeTest() {
+    void getDescriptorTypeFromFileTypeTest() {
         assertEquals(DescriptorType.CWL, ToolsImplCommon.getDescriptorTypeFromFileType(FileType.DOCKSTORE_CWL).get());
         assertEquals(DescriptorType.CWL, ToolsImplCommon.getDescriptorTypeFromFileType(FileType.CWL_TEST_JSON).get());
         assertEquals(DescriptorType.GALAXY, ToolsImplCommon.getDescriptorTypeFromFileType(FileType.DOCKSTORE_GXFORMAT2).get());
@@ -165,7 +163,7 @@ public class ToolsImplCommonTest {
     }
 
     @Test
-    public void getDescriptorTypeFromDescriptorLanguageTest() {
+    void getDescriptorTypeFromDescriptorLanguageTest() {
         assertEquals(DescriptorType.SMK, ToolsImplCommon.getDescriptorTypeFromDescriptorLanguage(DescriptorLanguage.SMK).get());
         assertEquals(DescriptorType.CWL, ToolsImplCommon.getDescriptorTypeFromDescriptorLanguage(DescriptorLanguage.CWL).get());
         assertEquals(DescriptorType.GALAXY, ToolsImplCommon.getDescriptorTypeFromDescriptorLanguage(DescriptorLanguage.GXFORMAT2).get());
